# name: test_analyze_mapping
  <class 'Analysis'> {
    attributes=<class 'list'> [
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszf700ahxgut1amf3sb3',
            merging_script=None,
            static_inputs=<class 'list'> [
              'unknown',
            ],
          },
        ],
        path='status',
        type='code',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszfl00apxgut3efwipse',
            merging_script=None,
            static_inputs=<class 'list'> [
              'http ://loinc.org',
            ],
          },
        ],
        path='code.coding[0].system',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszfu00auxgutgcraw8u2',
            merging_script=None,
            static_inputs=<class 'list'> [
              '29463-7',
            ],
          },
        ],
        path='code.coding[0].code',
        type='code',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
              <class 'SqlColumn'> {
                cleaning_script=<Script: clean_dateTime>,
                column='dischtime',
                concept_map=None,
                joins=<class 'list'> [
                ],
                owner='public',
                table='admissions',
              },
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszfy00axxgut06tymipu',
            merging_script=None,
            static_inputs=<class 'list'> [
              'Body weight',
            ],
          },
        ],
        path='code.coding[0].display',
        type='string',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszg300b0xgutcctthoa3',
            merging_script=None,
            static_inputs=<class 'list'> [
              'Patient',
            ],
          },
        ],
        path='subject.type',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszga00b4xguthp4a16v5',
            merging_script=None,
            static_inputs=<class 'list'> [
              'http://terminology.arkhn.org/038b7a11-2195-4b6d-b5d3-40e5422d7446',
            ],
          },
        ],
        path='subject.identifier.system',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
              <class 'SqlColumn'> {
                cleaning_script=<Script: clean_dateTime>,
                column='admittime',
                concept_map=None,
                joins=<class 'list'> [
                ],
                owner='public',
                table='chartevents',
              },
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszgh00b8xgutz98bej79',
            merging_script=None,
            static_inputs=<class 'list'> [
            ],
          },
        ],
        path='subject.identifier.value',
        type='string',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszgn00bbxgutfyq60u1n',
            merging_script=None,
            static_inputs=<class 'list'> [
              'Encounter',
            ],
          },
        ],
        path='encounter.type',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszgu00bfxgut336ul1fr',
            merging_script=None,
            static_inputs=<class 'list'> [
              'http://terminology.arkhn.org/a31b9d5c-6635-4861-8162-577bd26eb010',
            ],
          },
        ],
        path='encounter.identifier.system',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
              <class 'SqlColumn'> {
                cleaning_script=None,
                column='icustay_id',
                concept_map=None,
                joins=<class 'list'> [
                ],
                owner='public',
                table='chartevents',
              },
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszh100bjxgut3sew1u2z',
            merging_script=None,
            static_inputs=<class 'list'> [
            ],
          },
        ],
        path='encounter.identifier.value',
        type='string',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
              <class 'SqlColumn'> {
                cleaning_script=None,
                column='charttime',
                concept_map=None,
                joins=<class 'list'> [
                ],
                owner='public',
                table='chartevents',
              },
            ],
            conditions=<class 'list'> [
            ],
            id='cktiqszh600bmxgutabgdcab4',
            merging_script=None,
            static_inputs=<class 'list'> [
            ],
          },
        ],
        path='effectiveDateTime',
        type='dateTime',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
              <class 'Condition'> {
                action='EXCLUDE',
                relation='NULL',
                sql_column=<class 'SqlColumn'> {
                  cleaning_script=None,
                  column='valuenum',
                  concept_map=None,
                  joins=<class 'list'> [
                  ],
                  owner='public',
                  table='chartevents',
                },
                value='',
              },
            ],
            id='cktiqszhb00bpxgutpj8j01du',
            merging_script=None,
            static_inputs=<class 'list'> [
              'http://unitsofmeasure.org',
            ],
          },
        ],
        path='valueQuantity.system',
        type='uri',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
            ],
            conditions=<class 'list'> [
              <class 'Condition'> {
                action='EXCLUDE',
                relation='NULL',
                sql_column=<class 'SqlColumn'> {
                  cleaning_script=None,
                  column='valuenum',
                  concept_map=None,
                  joins=<class 'list'> [
                  ],
                  owner='public',
                  table='chartevents',
                },
                value='',
              },
            ],
            id='cktiqszhi00buxgutz3o4iyl7',
            merging_script=None,
            static_inputs=<class 'list'> [
              'kg',
            ],
          },
        ],
        path='valueQuantity.unit',
        type='string',
      },
      <class 'Attribute'> {
        input_groups=<class 'list'> [
          <class 'InputGroup'> {
            attribute=...,
            columns=<class 'list'> [
              <class 'SqlColumn'> {
                cleaning_script=None,
                column='valuenum',
                concept_map=None,
                joins=<class 'list'> [
                ],
                owner='public',
                table='chartevents',
              },
            ],
            conditions=<class 'list'> [
              <class 'Condition'> {
                action='EXCLUDE',
                relation='NULL',
                sql_column=<class 'SqlColumn'> {
                  cleaning_script=None,
                  column='valuenum',
                  concept_map=None,
                  joins=<class 'list'> [
                  ],
                  owner='public',
                  table='chartevents',
                },
                value='',
              },
            ],
            id='cktiqszhp00byxguti7n2evk5',
            merging_script=None,
            static_inputs=<class 'list'> [
            ],
          },
        ],
        path='valueQuantity.value',
        type='decimal',
      },
    ],
    definition=None,
    definition_id='Observation',
    filters=<class 'list'> [
      <class 'SqlFilter'> {
        relation='IN',
        sql_column=<class 'SqlColumn'> {
          cleaning_script=None,
          column='itemid',
          concept_map=None,
          joins=<class 'list'> [
          ],
          owner='public',
          table='chartevents',
        },
        value='762,3580,3696,226512',
      },
    ],
    is_static=False,
    label='Body_Weight',
    logical_reference='6f691f4c-920b-4cc0-b241-67f77f43850e',
    primary_key_column=<class 'SqlColumn'> {
      cleaning_script=None,
      column='row_id',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
    reference_paths=<class 'list'> [
      <class 'list'> [
        'partOf',
      ],
      <class 'list'> [
        'subject',
      ],
      <class 'list'> [
        'encounter',
      ],
    ],
    resource_id='cktiqszf200aexgutj9ttg8l1',
    source_credentials=<class 'dict'> {
      'database': 'test',
      'host': 'mimic',
      'login': 'test',
      'model': 'POSTGRES',
      'password': 'test',
      'port': 5432,
    },
    source_id='cktiqsyuj0002xgutzhqbn1ut',
  }
---
# name: test_analyze_mapping.1
  <class 'set'> {
    <class 'SqlColumn'> {
      cleaning_script=None,
      column='charttime',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
    <class 'SqlColumn'> {
      cleaning_script=None,
      column='icustay_id',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
    <class 'SqlColumn'> {
      cleaning_script=None,
      column='itemid',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
    <class 'SqlColumn'> {
      cleaning_script=None,
      column='subject_id',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
    <class 'SqlColumn'> {
      cleaning_script=None,
      column='valuenum',
      concept_map=None,
      joins=<class 'list'> [
      ],
      owner='public',
      table='chartevents',
    },
  }
---
# name: test_analyze_mapping.2
  <class 'list'> [
    <class 'SqlFilter'> {
      relation='IN',
      sql_column=<class 'SqlColumn'> {
        cleaning_script=None,
        column='itemid',
        concept_map=None,
        joins=<class 'list'> [
        ],
        owner='public',
        table='chartevents',
      },
      value='762,3580,3696,226512',
    },
  ]
---
